--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 * text=auto
 *.psd filter=lfs diff=lfs merge=lfs -text
 Playground.unity filter=lfs diff=lfs merge=lfs -text
+Playground[[:space:]]1.unity filter=lfs diff=lfs merge=lfs -text
